hphp/hack/test/typecheck/yield_from_bad1.php.exp
File "yield_from_bad1.php", line 7, characters 3-16:
Invalid yield from (Typing[4110])
File "yield_from_bad1.php", line 6, characters 25-27:
This is an int
File "yield_from_bad1.php", line 3, characters 25-30:
It is incompatible with a string
File "hhi_lib__srcs/classes.hhi", line 97, characters 63-64:
  via this generic Tk
File "hhi_lib__srcs/interfaces.hhi", line 248, characters 60-61:
  via this generic Tk
